--- a/projects/client/src/app/app.component.html
+++ b/projects/client/src/app/app.component.html
@@ -1,1 +1,6 @@
+<div *ngIf="updateAvailable" class="update-banner">
+  A new version is available. 
+  <button (click)="updateApp()" class="update-button">Update Now</button>
+</div>
+
 <router-outlet></router-outlet>
